--- a/labs/python_at_the_edge/byod.html
+++ b/labs/python_at_the_edge/byod.html
@@ -87,3 +87,8 @@ virtualenv venv --python=python2.7
 source venv/bin/activate
 pip install -r requirements.txt
 </pre>
+
+<h3 id="usingthislab">IOS XE Programmability Sandbox</h2>
+<p>
+  You will need to reserve an instance of the sandbox, and establish a VPN connection to your individual Sandbox to complete this lab; details for connecting to the IOS XE can be found at https://devnetsandbox.cisco.com/RM/Topology.  For reference, here are the key details:
+</p>
