updated url in hyperlink

--- a/labs/cloud_to_fog/byod.html
+++ b/labs/cloud_to_fog/byod.html
@@ -90,5 +90,13 @@ pip install -r requirements.txt
 
 <h3 id="usingthislab">IOS XE Programmability Sandbox</h2>
 <p>
-  You will need to reserve an instance of the sandbox, and establish a VPN connection to your individual Sandbox to complete this lab; details for connecting to the IOS XE can be found at https://devnetsandbox.cisco.com/RM/Topology.  For reference, here are the key details:
+  You will need to reserve an instance of the sandbox, and establish a VPN connection to your individual Sandbox to complete this lab; details for connecting to the  can be found at https://devnetsandbox.cisco.com/RM/Topology.  For reference, here are the key details:
 </p>
+
+<ul>
+  <li>
+    APIC URL: <a href="https://devnetsandbox.cisco.com/RM/Diagram/Index/1b83c4bf-f63e-4e4b-9119-9b385751f1b6?diagramType=Topology" target="_blank">IOS XE Programmability</a>
+  </li>
+</ul>
+
+
