--- a/labs/python_at_the_edge/byod.html
+++ b/labs/python_at_the_edge/byod.html
@@ -95,6 +95,6 @@ pip install -r requirements.txt
 
 <ul>
   <li>
-    APIC URL: <a href="https://devnetsandbox.cisco.com/RM/Diagram/Index/1b83c4bf-f63e-4e4b-9119-9b385751f1b6?diagramType=Topology" target="_blank">IOS XE Programmability</a>
+    IOS XE Programmability Sandbox URL: <a href="https://devnetsandbox.cisco.com/RM/Diagram/Index/1b83c4bf-f63e-4e4b-9119-9b385751f1b6?diagramType=Topology" target="_blank">IOS XE Programmability</a>
   </li>
 </ul>
