--- a/labs/linux_at_the_edge/byod.html
+++ b/labs/linux_at_the_edge/byod.html
@@ -10,7 +10,7 @@
 </ul>
 
 <h3>Workstation Setup Instructions</h3>
-<p>This lab can be completed from a Mac, or Linux workstation as long as the above pre-reqs are installed. (Windows is <strong>NOT</strong> supported by Ansible)  </p>
+<p>This lab can be completed from a Windows, Mac, or Linux workstation as long as the above pre-reqs are installed.</p>
 <p>Python 2.7 is included with Linux and OS X by default, however it is typically an older version.  To assist with ensureing you have the latest version of Python, here are some suggested steps to prepare common platforms.</p>
 <p>If your environment requires a proxy server to access internet resources, be sure that it is configured correctly on your system, and adjust any steps/commands listed below as needed.</p>
 <h3>Install Python</h3>
