added putty url

--- a/labs/python_at_the_edge/byod.html
+++ b/labs/python_at_the_edge/byod.html
@@ -9,6 +9,14 @@
     <li>"git" command line tools</li>
 </ul>
 
+<h3>SSH client </h3>
+<p>For this lab an ssh client is require. Using Mac/Linux directly use the OS native SSH client. For connecting using Windows use a SSH client such as PuTTY.</p>
+<ul>
+  <li>
+    Putty Dowload link: <a href="https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html" target="_blank">Download PuTTY: latest release</a>
+  </li>
+</ul>
+
 <h3>Workstation Setup Instructions</h3>
 <p>This lab can be completed from a Windows, Mac, or Linux workstation as long as the above pre-reqs are installed.</p>
 <p>Python 2.7 is included with Linux and OS X by default, however it is typically an older version.  To assist with ensureing you have the latest version of Python, here are some suggested steps to prepare common platforms.</p>
